--- a/scripts/RA_figs_20160627.Rmd
+++ b/scripts/RA_figs_20160627.Rmd
@@ -1,5 +1,5 @@
-#Figure 1 Different species have different RA values. But biggest shift in RA is with age
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7.5}
+###playing with variables to try and show meaningful RA plots despite negative leaf growth values
+``` {r}
 if (min(SummaryInd$growth_leaf) <= 0) {
   SummaryInd$growth_leaf_positive = SummaryInd$growth_leaf - SummaryInd$growth_leaf_min + 1
 } else {
@@ -40,8 +40,62 @@ for (i in 1:length(SummaryInd$individual)) {
   }
 }
 
+SummaryInd$growth_leaf_fixed_max = SummaryInd$growth_leaf
+SummaryInd$RA_fixed_max = SummaryInd$RA_leaf_area
+for (i in 1:length(SummaryInd$individual)) {
+  if (SummaryInd$RA_leaf_area[i] < 0) {
+  SummaryInd$growth_leaf_fixed_max[i] = SummaryInd$repro_inv[i]*0.005
+  SummaryInd$RA_fixed_max[i] = 1.1 
+  }
+   if (SummaryInd$RA_leaf_area[i] > 1) {
+  SummaryInd$growth_leaf_fixed_max[i] = SummaryInd$repro_inv[i]*0.005
+  SummaryInd$RA_fixed_max[i] = 1.1
+  }
+}
+
+SummaryInd$leaf_replacement = SummaryInd$growth_leaf
+SummaryInd$leaf_new = SummaryInd$growth_leaf
+SummaryInd$leaf_new_nonzero = SummaryInd$growth_leaf
+for (i in 1:length(SummaryInd$individual)) {
+  if (SummaryInd$growth_leaf[i] < 0) {
+  SummaryInd$leaf_replacement[i] = SummaryInd$leaf_inv_gross[i]
+  SummaryInd$leaf_new_nonzero[i] =.1
+  SummaryInd$leaf_new[i] = 0
+  }
+   if (SummaryInd$growth_leaf[i] > 0) {
+  SummaryInd$leaf_replacement[i] = SummaryInd$leaf_shed[i]
+  SummaryInd$leaf_new[i] = SummaryInd$growth_leaf[i]
+  SummaryInd$leaf_new_nonzero[i] =SummaryInd$growth_leaf[i]
+  }
+}
+
+SummaryInd$repro_inv_nonzero = SummaryInd$repro_inv
+for (i in 1:length(SummaryInd$individual)) {
+  if (SummaryInd$repro_inv[i] < .0001) {
+    SummaryInd$repro_inv_nonzero[i] = .1
+  }
+}
+
+plot(leaf_replacement~leaf_new, subset(SummaryInd), log="xy", col=col.spp(species),pch=16)
+abline(0,1)
+
+plot(leaf_replacement~leaf_new, subset(SummaryInd), log="xy", col=col.age(age),pch=16)
+abline(0,1)
+
+scatterplot3d(log(SummaryInd$repro_inv_nonzero),log(SummaryInd$leaf_new_nonzero),log(SummaryInd$leaf_replacement),color=col.spp(SummaryInd$species),pch=16,type="h",lty.hplot=3)
+
+scatterplot3d(log(SummaryInd$leaf_replacement),log(SummaryInd$leaf_new),log(SummaryInd$repro_inv),color=col.spp(SummaryInd$species),pch=16,type="h", lty.hplot=3)
+
+scatterplot3d(log10(SummaryInd$leaf_replacement),log10(SummaryInd$leaf_new),log10(SummaryInd$repro_inv_nonzero),color=col.spp(SummaryInd$species),pch=16,grid=TRUE,type="h", lty.hplot=3,lwd=.2,xlim=c(-1,6),ylim=c(-1,6),zlim=c(-1,6))
+
+planes3d(0, x.coef = 1, y.coef = 1, lty = "dashed",)
 
 
+par(mfrow=c(1,1), cex=1, omi=c(1.1,0.8,.1,.1), mai=c(0.3,.4,.1,0.2)) 
+```
+
+#Figure 1 Different species have different RA values. But biggest shift in RA is with age
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7.5}
 #pdf("figs2/RA/Figure_1_leaf_vs_repro.pdf", height=4.3, width=8)
 win.metafile("figs2/RA/Figure_1_leaf_vs_repro.wmf", height=4.3, width=8)
 plot
@@ -100,17 +154,92 @@ abline(0,1)
 dev.off()
 
 scatterplot3d(SummaryInd$leaf_shed,SummaryInd$leaf_inv_gross,SummaryInd$repro_inv,log="xyz",color=col.spp(SummaryInd$species),pch=16)
+
+
+ternary <- dplyr::select(SummaryInd,species,age,leaf_shed,growth_leaf,pack_disp_costs,seed_costs,embryo_endo_size)
+ternary$per_poll <-100*ternary$prepollen_costs/ternary$seed_costs
+ternary$post_poll <- 100-ternary$per_poll
+ternary$per_seed <-100*ternary$embryo_endo_size/ternary$seed_costs
+ternary$per_disp <-100*ternary$pack_disp_costs/ternary$seed_costs
+
+mod_poll <- sma(per_poll~seed_costs,ternary,slope.test=0,method="OLS",log="x")
+mod_seed <- sma(per_seed~seed_costs,ternary,slope.test=0,method="OLS",log="x")
+mod_disp <- sma(per_disp~seed_costs,ternary,slope.test=0,method="OLS",log="x")
+mod_post_poll <- sma(post_poll~seed_costs,ternary,slope.test=0,method="OLS",log="x")
+
+costs_per_seed <- as.data.frame("costs for seed (%)")
+costs_per_seed <- cbind(costs_per_seed,dplyr::select(mod_seed$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
+
+costs_per_seed2 <- as.data.frame("costs for pre-pollination (%)")
+costs_per_seed2 <- cbind(costs_per_seed2,dplyr::select(mod_poll$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
+costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
+
+costs_per_seed2 <- as.data.frame("costs for dispersal (%)")
+costs_per_seed2 <- cbind(costs_per_seed2,dplyr::select(mod_disp$groupsummary,r2,pval,Int,Slope,Slope_lowCI,Slope_highCI,Slope_test,Slope_test_p))
+names(costs_per_seed2) <- c("investment category (mg)","r squared","p value","intercept","slope","slope_lowCI","slope_highCI","slope test","slope test p")
+costs_per_seed <- rbind(costs_per_seed,costs_per_seed2)
+
+write.csv(costs_per_seed, file="figs2/Accessory_Costs/Table00_in_text_costs_per_seed.csv",row.names=FALSE)
+
+win.metafile("figs2/Accessory_Costs/FigureXX_seedcost_components.wmf", height=6, width=6)
+plot
+
+plot(per_seed~seed_costs,ternary,col="black",log="x",pch=21,cex=2,ylim=c(0,75),ylab="prop of seed_costs")
+points(per_poll~seed_costs,ternary,col="red",pch=16,cex=2)
+points(per_disp~seed_costs,ternary,col="blue",pch=16,cex=2)
+
+abline(mod_poll$groupsummary["Int"][[1]],mod_poll$groupsummary["Slope"][[1]],col="red",lwd=2)
+abline(mod_seed$groupsummary["Int"][[1]],mod_seed$groupsummary["Slope"][[1]],col="black",lty=2,lwd=2)
+abline(mod_disp$groupsummary["Int"][[1]],mod_disp$groupsummary["Slope"][[1]],col="blue",lwd=2)
+legend("topright",legend=c("seed","prepollen","pack&disp"),col=c("black","red","blue"),pch=16, cex=1.1,bty="n")
+v <- sqrt(ternary$seed_costs/500)
+ternary$horz <- c(1.8,1.3,1.2,-0.3,0.6,0.6,0.5,-0.2,1.3,1.7,1.4,-0.2,-0.3,-0.3)
+ternary$vert <- c(v[1]*-1.7,v[2]*1.1,v[3]*1.2,v[4],v[5]*-2.3,v[6]*4.5,v[7],v[8]*1.6,v[9],v[10]*0.2,v[11],v[12],v[13],v[14])
+ternary = ternary[with(ternary, order(-seed_costs)), ]
+label <- 20
+
+dev.off()
+library(ggtern)
+win.metafile("figs2/Accessory_Costs/Figure03_ternary_diagram_seed_costs.wmf", height=5, width=5)
+plot
+
+par(mfrow=c(1,1), cex=1, omi=c(2,2,2,2), mai=c(2,2,2,2)) 
+
+
+ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
+      geom_point(size=sqrt(ternary$seed_costs/2),shape=20,color=col.spp(ternary$species)) +
+      theme_bw() + 
+      theme_showarrows() +
+      geom_text(label=ternary$species, color="black", hjust=ternary$horz, 
+                 vjust=ternary$vert,size=2) +
+      ggtitle("Seed cost components")+
+      labs(T="embryo+endosperm",L="pre-pollination",R="provisioning")+
+      Tarrowlab("embryo + endosperm weight (%)")+
+      Larrowlab("pre-pollination costs (%)")+
+      Rarrowlab("provisioning costs (%)")+
+      theme(plot.title = element_text(size=11,face="bold"))+
+      theme(tern.axis.title.T = element_text(size=9,face="plain"))+
+      theme(tern.axis.title.L = element_text(size=9,face="plain",hjust=0,vjust=1.7))+
+      theme(tern.axis.title.R = element_text(size=9,face="plain",hjust=1,vjust=1.7))+
+      theme(tern.axis.arrow.text = element_text(size=9,face="plain"))+
+      theme(tern.axis.arrow.start= 0.2)+ 
+      theme(tern.axis.arrow.finish=0.8)
+
+
+
 ```
 
 
-#Figure 1 - alternate rendition, not scaling leaf investment to be positive
+#Figure 1 - alternate rendition, not scaling leaf investment to be positive, reassigning "negative" leaf investment individuals to RA =1.1
 ```{r}
 pdf("figs2/RA/Figure_1_alt_leaf_vs_repro.pdf", height=4.3, width=8)
 plot
 
 par(mfrow=c(1,2), cex=1, omi=c(1.1,0.8,.1,.1), mai=c(0.3,.4,.1,0.2)) 
 
-plot(repro_inv~jitter(growth_leaf_no_neg_values), subset(SummaryInd), log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000),
+plot(repro_inv~(growth_leaf_fixed_max), subset(SummaryInd), log="xy", col=col.spp(species),pch=16,xlim=c(1,1000000),ylim=c(1,1000000),
      xlab="",ylab="",cex=0.8,xaxt="n",yaxt="n")
 axis(1, at=c(1,100,10000,1000000), labels=c(1,100,10000,"1000000"),cex.axis=0.9)
 axis(2, at=c(1,100,10000,1000000), labels=c(1,100,10000,"1000000"),cex.axis=0.9)
@@ -129,7 +258,7 @@ abline(log10(.010101),1)
 text(10^5.6,10^3.8,srt=45,"RA = 0.01",cex=.6)
 mtext("reproductive investment (mg)",2,line=1,outer=TRUE)
 
-plot(repro_inv~growth_leaf_no_neg_values, subset(SummaryInd), log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000),
+plot(repro_inv~growth_leaf_fixed_max, subset(SummaryInd), log="xy", col=col.age(age),pch=16,xlim=c(1,1000000),ylim=c(1,1000000),
      xlab="",ylab="",cex=0.8,xaxt="n",yaxt="n")
 axis(1, at=c(1,100,10000,1000000), labels=c(1,100,10000,"1000000"),cex.axis=0.9)
 axis(2, at=c(1,100,10000,1000000), labels=c(1,100,10000,"1000000"),cex.axis=0.9)
@@ -164,7 +293,8 @@ xvar <- "total_weight_0"
 data <- subset(SummarySppAge[["mean"]])
 data <- split(data, data$species)
 
-data2 <- subset(SummaryInd,RA_leaf_area>-2&RA_leaf_area<3)
+#data2 <- subset(SummaryInd,RA_leaf_area>-2&RA_leaf_area<3)
+data2 <- subset(SummaryInd)
 data2 <- split(data2, data2$species)
 
 curves <- as.data.frame(c("determinate: gradual","determinate: gradual","indeterminate: asymptotic","indeterminate: asymptotic","determinate: bang-bang","determinate: bang-bang","indeterminate: gradual","determinate: bang-bang","determinate: gradual","determinate: gradual","indeterminate: declining","determinate: gradual","determinate: bang-bang","determinate: gradual"))
@@ -176,7 +306,7 @@ data3 <- curves
 data3 <- split(data3, data3$species)
 
 for(spp in names(data)) {
-  plot(RA_leaf_area~age,data2[[spp]],col=col.age(data2[[spp]]$age),pch=16,xlab="",ylab="",log="x",xlim=c(1,40),ylim=c(-0.25,1.75),yaxt="n",xaxt="n")
+  plot(RA_fixed_max~age,data2[[spp]],col=col.age(data2[[spp]]$age),pch=16,xlab="",ylab="",log="x",xlim=c(1,40),ylim=c(-0.25,1.75),yaxt="n",xaxt="n")
   points(RA_leaf_area~age,data[[spp]],pch=151,col=col.age(data[[spp]]$age),cex=1.5)
    if(spp=="BOLE"|spp=="COER") {
     rect(14,par("usr")[3],10^par("usr")[2],par("usr")[4],col="light grey",density=NA)
@@ -202,7 +332,7 @@ for(spp in names(data)) {
     axis(2, at=c(-0,0.5,1,1.5), labels=c(-0,0.5,1,1.5),cex.axis=.8,las=1)
   } else{}
   extra.top.left.logx(labels.spp.full(spp),3)
-  extra.bottom.left.logx(data3[[spp]]$RA_type,1)
+  extra.bottom.left.logx(data3[[spp]]$RA_type,1,0.8)
 }
 
 mtext("RA", 2, outer=TRUE,cex=1,line=2)
